feat: add global font-size style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+  font-size: 62.5%;
+}
+
 body {
   background-color: theme("colors.backGround");
   color: theme("colors.font");
